# Champsim-IPC

./: .gitignore  100mil_baseline_f.txt  100mil_baseline_optA.txt  100mil_baseline_optA_eviction_print.txt  100mil_baseline_optA_f.txt  100mil_baseline_optA_prot_print.txt  100mil_baseline_output.txt  100mil_baseline_output_2core.txt  100mil_prefetch_optA_f.txt  100mil_prefetch_optA_output.txt  100mil_prefetch_optA_output_test.txt  100mil_prefetch_output.txt  100mil_prefetch_reset_stats.txt  Makefile  README.md  build_champsim.sh  build_champsim_2.sh  build_champsim_2core.sh  build_champsim_3_baseline.sh  build_champsim_3_prefetch.sh  launch_champsim_tracer_2ranks.sh  merge_trace.py  tag_ipc.py
inc/: block.h  cache.h  champsim.h.bak  instruction.h
launch_scripts/: launch_2ranks_future.sh  launch_2ranks_meta.sh  launch_2ranks_ptrchase.sh  launch_2ranks_tagged.sh  launch_2ranks_vanilla.sh
mpsc_queue/: CMakeLists.txt  mpsc_queue_f.cc  mpsc_queue_final.cc  mpsc_queue_future.cc  mpsc_queue_ptr_chase.cc  mpsc_queue_tagged.cc
outputs/: out.txt
prefetcher/: ghb.l2c_pref
profiling_scripts/: launch_2ranks.sh  launch_2ranks_meta.sh  launch_rank.sh  run_rank0.sh
replacement/: base_replacement.cc  base_replacement_drrip_l2c.cc  base_replacement_ipc.cc  base_replacement_lru.cc  base_replacement_ship_l2c.cc  drrip.l2c_repl  drrip.llc_repl  ipc.l2c_repl  ipc.llc_repl  lru.l2c_repl  ship.l2c_repl
src/: cache.cc  main.cc  ooo_cpu.cc
tracer/: MyPinTool.cpp  MyPinTool_DEPRECATED.cpp  champsim_tracer.cpp  clean_tracer.sh  make_modified_tracer.sh  make_tracer.sh  quick_make.sh
(+6 files in other folders)
